// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzTextarea > Snapshots > should match snapshot - default state 1`] = `
"<div class="flex flex-col gap-8 items-start w-full"><label class="text-sm">Test Label</label>
  <div class="relative w-full"><textarea class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-base border-grey-300 resize"></textarea>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`FzTextarea > Snapshots > should match snapshot - disabled state 1`] = `
"<div class="flex flex-col gap-8 items-start w-full cursor-not-allowed"><label class="text-sm text-grey-300 cursor-not-allowed">Test Label</label>
  <div class="relative w-full"><textarea class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-base border-grey-300 resize cursor-not-allowed" disabled=""></textarea>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`FzTextarea > Snapshots > should match snapshot - error state 1`] = `
"<div class="flex flex-col gap-8 items-start w-full"><label class="text-sm">Test Label</label>
  <div class="relative w-full"><textarea class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-base border-semantic-error resize"></textarea>
    <!--v-if-->
  </div>
  <div class="text-sm flex items-center gap-6 h-20">
    <div class="flex items-center justify-center w-[20px] h-[20px] text-semantic-error"><svg class="svg-inline--fa fa-triangle-exclamation h-[16px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="triangle-exclamation" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
        <path class="" fill="currentColor" d="M248.4 84.3c1.6-2.7 4.5-4.3 7.6-4.3s6 1.6 7.6 4.3L461.9 410c1.4 2.3 2.1 4.9 2.1 7.5c0 8-6.5 14.5-14.5 14.5l-387 0c-8 0-14.5-6.5-14.5-14.5c0-2.7 .7-5.3 2.1-7.5L248.4 84.3zm-41-25L9.1 385c-6 9.8-9.1 21-9.1 32.5C0 452 28 480 62.5 480l387 0c34.5 0 62.5-28 62.5-62.5c0-11.5-3.2-22.7-9.1-32.5L304.6 59.3C294.3 42.4 275.9 32 256 32s-38.3 10.4-48.6 27.3zM288 368a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zm-8-184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 96c0 13.3 10.7 24 24 24s24-10.7 24-24l0-96z"></path>
      </svg></div> This field is required
  </div>
</div>"
`;

exports[`FzTextarea > Snapshots > should match snapshot - large size 1`] = `
"<div class="flex flex-col gap-8 items-start w-full"><label class="text-sm">Test Label</label>
  <div class="relative w-full"><textarea class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-lg border-grey-300 resize"></textarea>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`FzTextarea > Snapshots > should match snapshot - readonly state 1`] = `
"<div class="flex flex-col gap-8 items-start w-full"><label class="text-sm">Test Label</label>
  <div class="relative w-full"><textarea class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-base border-grey-300 resize" readonly=""></textarea>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`FzTextarea > Snapshots > should match snapshot - small size 1`] = `
"<div class="flex flex-col gap-8 items-start w-full"><label class="text-sm">Test Label</label>
  <div class="relative w-full"><textarea class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-sm border-grey-300 resize"></textarea>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`FzTextarea > Snapshots > should match snapshot - valid state 1`] = `
"<div class="flex flex-col gap-8 items-start w-full"><label class="text-sm">Test Label</label>
  <div class="relative w-full"><textarea class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-base border-grey-300 resize pr-[38px]"></textarea>
    <div class="flex items-center justify-center w-[20px] h-[20px] text-semantic-success absolute top-10 right-10"><svg class="svg-inline--fa fa-check h-[16px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="check" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
        <path class="" fill="currentColor" d="M441 103c9.4 9.4 9.4 24.6 0 33.9L177 401c-9.4 9.4-24.6 9.4-33.9 0L7 265c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l119 119L407 103c9.4-9.4 24.6-9.4 33.9 0z"></path>
      </svg></div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`FzTextarea > Snapshots > should match snapshot - with all props 1`] = `
"<div class="flex flex-col gap-8 items-start w-full"><label class="text-sm" for="test-id">Test Label *</label>
  <div class="relative w-full"><textarea id="test-id" name="test-name" class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-base border-grey-300 resize-y pr-[38px]" placeholder="Enter text" required="" rows="5" cols="50" minlength="10" maxlength="100"></textarea>
    <div class="flex items-center justify-center w-[20px] h-[20px] text-semantic-success absolute top-10 right-10"><svg class="svg-inline--fa fa-check h-[16px]" aria-hidden="true" focusable="false" data-prefix="far" data-icon="check" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
        <path class="" fill="currentColor" d="M441 103c9.4 9.4 9.4 24.6 0 33.9L177 401c-9.4 9.4-24.6 9.4-33.9 0L7 265c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l119 119L407 103c9.4-9.4 24.6-9.4 33.9 0z"></path>
      </svg></div>
  </div>
  <div class="text-sm flex items-center gap-6 h-20"><span class="text-grey-500">Help text</span></div>
</div>"
`;

exports[`FzTextarea > Snapshots > should match snapshot - with help message 1`] = `
"<div class="flex flex-col gap-8 items-start w-full"><label class="text-sm">Test Label</label>
  <div class="relative w-full"><textarea class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-base border-grey-300 resize"></textarea>
    <!--v-if-->
  </div>
  <div class="text-sm flex items-center gap-6 h-20"><span class="text-grey-500">This is helpful text</span></div>
</div>"
`;

exports[`FzTextarea > Snapshots > should match snapshot - with required 1`] = `
"<div class="flex flex-col gap-8 items-start w-full"><label class="text-sm">Test Label *</label>
  <div class="relative w-full"><textarea class="border-1 rounded p-10 placeholder:text-gray-300 disabled:bg-grey-100 disabled:border-grey-100 block invalid:border-semantic-error w-full text-base border-grey-300 resize" required=""></textarea>
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;
